# ffmpeg-transcoding-pipeline

./: CMakeLists.txt  LICENSE  README.md  configure.sh  run.sh
src/: main.cpp
test/: 0_hello_world.c
